--- a/next-website/package.json
+++ b/next-website/package.json
@@ -9,36 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.10.0",
-    "@mantine/carousel": "^5.10.3",
-    "@mantine/core": "^5.10.3",
-    "@mantine/dates": "^5.10.3",
-    "@mantine/dropzone": "^5.10.3",
-    "@mantine/form": "^5.10.3",
-    "@mantine/hooks": "^5.10.3",
-    "@mantine/modals": "^5.10.3",
-    "@mantine/next": "^5.10.3",
-    "@mantine/notifications": "^5.10.3",
-    "@mantine/nprogress": "^5.10.3",
-    "@mantine/prism": "^5.10.3",
-    "@mantine/spotlight": "^5.10.3",
-    "@mantine/tiptap": "^5.10.3",
     "@next/font": "13.1.6",
-    "@tabler/icons": "^1.119.0",
-    "@tiptap/extension-link": "^2.0.0-beta.212",
-    "@tiptap/react": "^2.0.0-beta.212",
-    "@tiptap/starter-kit": "^2.0.0-beta.212",
-    "daisyui": "^2.50.0",
-    "dayjs": "^1.11.7",
-    "embla-carousel-react": "^7.0.9",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
