--- a/next-website/package.json
+++ b/next-website/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "daisyui": "^2.50.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
